--- a/01_germination/01_early/01_how_to_germinate_your_seeds/es.yml
+++ b/01_germination/01_early/01_how_to_germinate_your_seeds/es.yml
@@ -2,7 +2,7 @@ title: How to germinate your seeds
 intro:
   image: assets/pic.png
   text: |
-    Now that your grow box is ready and that you have your seed; *let’s get growing!*
+    Now that your grow box is ready and that you have received your seed; *let’s get growing!*
 
     First step is germination, it’s time to wake up our chosen seed.
     Seeds are made to survive through winter and sprout when 3 conditions are met:
