added notification field

--- a/10_seedling/10_early/10_how_to_germinate_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_germinate_your_seed/en.yml
@@ -36,8 +36,10 @@ reminders:
 
 triggers:
   - id: TEMPERATURE
+    notification: TODO
     metric: TEMP
     value: 21-32
   - id: HUMIDITY
+    notification: TODO
     metric: HUMI
     value: 60-70
