--- a/10_seedling/10_early/20_how_to_sow_your_seed/en.yml
+++ b/10_seedling/10_early/20_how_to_sow_your_seed/en.yml
@@ -14,8 +14,10 @@ reminders:
 
 triggers:
   - id: TEMPERATURE
+    notification: TODO
     metric: TEMP
     value: 21-32
   - id: HUMIDITY
+    notification: TODO
     metric: HUMI
     value: 40-70
