--- a/10_seedling/30_late/10_how_control_stretch/en.yml
+++ b/10_seedling/30_late/10_how_control_stretch/en.yml
@@ -1,4 +1,4 @@
-title: When to water your seedling
+title: How to control stretch
 tags: sgl, vertical, soil
 reftime: 5
 intro:
@@ -6,6 +6,7 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
+    
 
 reminders:
   - id: WATERING
