--- a/10_seedling/10_early/10_how_to_germinate_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_germinate_your_seed/en.yml
@@ -6,17 +6,22 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    Now that your grow box is ready and that you have your seed; *let’s get growing!*
-
-    First step is germination, it’s time to wake up our chosen seed.
-    Seeds are made to survive through winter and sprout when 3 conditions are met:
-
-    * Water: activates the seed’s growth hormones while making the shell easier to break through.
-    * Temperature: signals the plant it is safe to sprout, winter is over.
-    * Oxygen: determines how deep the seed is, low oxygen would mean it’s too deep and won’t be able to reach the surface.
-
+    Now that you have your seed, the first step is **germination**:
     1. Put the seed in a glass filled with slightly warm water.
     2. Put the glass in a dark place for 24 hours.
+
+  sections:
+  - title: Germination secrets explained
+    image:
+      url: assets/pic.png
+      layout: full
+    text: |
+      Seeds are made to survive through winter and sprout when 3 conditions are met:
+
+      * Water: activates the seed’s growth hormones while making the shell easier to break through.
+      * Temperature: signals the plant it is safe to sprout, winter is over.
+      * Oxygen: determines how deep the seed is, low oxygen would mean it’s too deep and won’t be able to reach the surface.
+    
 
 checklist:
   - name: Light mix soil
