--- a/10_seedling/30_late/20_when_to_start_adding_nutrients/en.yml
+++ b/10_seedling/30_late/20_when_to_start_adding_nutrients/en.yml
@@ -6,3 +6,5 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
+    The seed packs enough nutrients for the cotyledons (1st set of round leaves).
+    Start feeding your seedling wth a mild dose of fertilizer after they have first sests of true leaves.
