--- a/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
+++ b/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
@@ -10,7 +10,7 @@ intro:
     When the set or sets of true leaves of the seedling have spread out to cover the circumference of the container, it’s time.
   
 products:
-  - name: 1-2gal Fabric pot
+  - name: 1gal Fabric pot
     urls:
       - zone: US
         image: assets/fabric_pot.png
