fixed tag format

--- a/10_seedling/30_late/20_when_to_start_adding_nutrients/en.yml
+++ b/10_seedling/30_late/20_when_to_start_adding_nutrients/en.yml
@@ -1,5 +1,8 @@
 title: When to start adding nutrients
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 5
 intro:
   image:
