--- a/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
+++ b/10_seedling/30_late/30_when_to_repot_your_seedling/en.yml
@@ -1,5 +1,8 @@
 title: When to repot your seedling
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 7-10
 intro:
   image:
