--- a/20_veg/20_mid/00_when_to_train_your_plant/en.yml
+++ b/20_veg/20_mid/00_when_to_train_your_plant/en.yml
@@ -1,5 +1,8 @@
 title: How to germinate your seeds
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 15
 intro:
   image:
