--- a/20_veg/30_late/20_when_to_switch_to_bloom/en.yml
+++ b/20_veg/30_late/20_when_to_switch_to_bloom/en.yml
@@ -1,5 +1,8 @@
 title: How to germinate your seeds
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 42
 intro:
   image:
