--- a/30_bloom/10_early/10_how_to_prepare_bloom_nutrients/en.yml
+++ b/30_bloom/10_early/10_how_to_prepare_bloom_nutrients/en.yml
@@ -1,5 +1,8 @@
 title: How to germinate your seeds
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 42
 intro:
   image:
