--- a/template/en.yml
+++ b/template/en.yml
@@ -1,5 +1,8 @@
 title: How to germinate your seeds
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 42
 intro:
   image:
