--- a/20_veg/20_mid/00_when_to_train_your_plant/en.yml
+++ b/20_veg/20_mid/00_when_to_train_your_plant/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: When to start training your plant
 tags: sgl, vertical, soil
 reftime: 15
 intro:
@@ -7,4 +7,4 @@ intro:
     layout: left
   text: |
     Increase yield potential by training your plant to best fit it's space and light configuration.
-    In tight spaces with vertical lighting it's simple, training starts when there are 4 nodes.
+    In tight spaces with vertical lighting it's simple, training starts with a healthy plant having between 3-5 nodes.
