--- a/30_bloom/10_early/00_how_to_switch_to_bloom/en.yml
+++ b/30_bloom/10_early/00_how_to_switch_to_bloom/en.yml
@@ -6,77 +6,4 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    Now that your grow box is ready and that you have your seed; *let’s get growing!*
-
-    First step is germination, it’s time to wake up our chosen seed.
-    Seeds are made to survive through winter and sprout when 3 conditions are met:
-
-    * Water: activates the seed’s growth hormones while making the shell easier to break through.
-    * Temperature: signals the plant it is safe to sprout, winter is over.
-    * Oxygen: determines how deep the seed is, low oxygen would mean it’s too deep and won’t be able to reach the surface.
-
-    1. Put the seed in a glass filled with slightly warm water.
-    2. Put the glass in a dark place for 24 hours.
-
-sections:
-  - title: Section title
-    image:
-      url: assets/pic.png
-      layout: full
-    text: |
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-  - title: Section title
-    subsections:
-      - title: List item title
-        image:
-          url: assets/pic.png
-          layout: left
-        text: |
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        link:
-          title: VIEW
-          to: https://cityseedsbank.com/
-
-      - title: List item title 2
-        image:
-          url: assets/pic.png
-          layout: left
-        text: |
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        link:
-          title: VIEW
-          to: https://cityseedsbank.com/
-
-products:
-  - name: Light mix soil
-    urls:
-      - zone: EU
-        image: assets/monkey_soil.png
-        url: https://www.monkeysoil.com/en/product/light-mix-evolution/
-
-sources:
-  - title: Royal Queen Seeds
-    url: https://www.royalqueenseeds.com/blog-indoor-cannabis-growing-relative-humidity-and-temperatures-n243
-
-reminders:
-  - delay: 24h
-    text: Take your seed out of the water, it should have sprouted!
-    next: 01_veg/01_early/02_how_to_put_sprouted_seed_in_soil 
-
-triggers:
-  - id: TEMPERATURE
-    metric: TEMP
-    value: 21-32
-  - id: HUMIDITY
-    metric: HUMI
-    value: 60-70
+    Simply switch from the 18/6 veg light schedule to the 12/12 flowering light schedule via the app!
