--- a/30_bloom/10_early/20_bloom_defoliation/en.yml
+++ b/30_bloom/10_early/20_bloom_defoliation/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: Bloom defoliation
 tags: sgl, vertical, soil
 reftime: 42
 intro:
@@ -6,4 +6,4 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    
+    Time to defoliate and expose your bud-sites to as much light as possible!
