--- a/10_seedling/10_early/00_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/00_how_to_choose_your_seed/en.yml
@@ -21,6 +21,17 @@ sections:
     # todo which seedbank does the community uses (US-EU)?
 
     subsections:
+    - title: Seedsman
+        image:
+          url: assets/pic.png
+          layout: left
+        text: |
+          Seedsman has been in business since 2003, making them one of the older online seed banks around. With strains from over 120 breeders they have one of the largest seed catalogs in the world!
+          
+        link:
+          title: BUY SEEDS
+          to: https://www.seedsman.com/en/?a_aid=5e467237479ff
+
        - title: Sensi Seeds
         image:
           url: assets/pic.png
@@ -41,15 +52,4 @@ sections:
           
         link:
           title: BUY SEEDS
-          to: https://https://www.royalqueenseeds.com/33-feminized-cannabis-seeds
-
-      - title: Kannabia
-        image:
-          url: assets/pic.png
-          layout: left
-        text: |
-          Kannabia is based out of Spain with many years of work stabilizing genetics and adapting strains to the needs of cannabis cultivators. 
-          
-        link:
-          title: BUY SEEDS
-          to: https://www.kannabia.com/en/feminized-cannabis-seeds
+          to: https://www.paradise-seeds.com/en?acc=58238e9ae2dd305d79c2ebc8c1883422
