--- a/20_veg/20_mid/10_how_to_defoliate/en.yml
+++ b/20_veg/20_mid/10_how_to_defoliate/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: How to defoliate
 tags: sgl, vertical, soil
 reftime: 42
 intro:
@@ -6,4 +6,7 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    
+    Defoliation is the act of removing leaves to redirect energy to interesting growth spots and allow for better light penetration.
+    Start from the top of the plant, lift the bigger leaves, is it covering up and casting shadow over a new growth spot?
+    If yes then pinch the leaf's stem with your nails and cut it off.
+    Repeat the process from top to bottom.
