--- a/10_seedling/10_early/00_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/00_how_to_choose_your_seed/en.yml
@@ -24,7 +24,7 @@ sections:
     # todo which seedbank does the community uses (US-EU)?
 
     subsections:
-      - title: Sensi Seeds
+      - title: Seedsman
         image:
           url: assets/pic.png
           layout: left
