--- a/10_seedling/10_early/20_how_to_sow_your_seed/en.yml
+++ b/10_seedling/10_early/20_how_to_sow_your_seed/en.yml
@@ -12,8 +12,8 @@ intro:
     The seed has sprouted! Time to **sow** it in it's first pot :)
     1. Put a layer of clay balls in the small pot
     1. Add soil and water it
-    2. Make a hole with your finger or a pen about 1 nail deep
-    3. Carfuly place the seed and cover it up with soil
+    2. Make a hole with your finger or a pen 1/2 fingernail deep
+    3. Carfuly place the seed, cover it up with soil and tamp lightly
 
 products:
   - name: Light mix soil
