--- a/20_veg/10_early/00_how_to_transplant_your_seedling/en.yml
+++ b/20_veg/10_early/00_how_to_transplant_your_seedling/en.yml
@@ -13,7 +13,7 @@ intro:
     2. Wet your soil in a separate container and add it to the pot
     **note: make sure to tamp the soil - loose soil = dead roots**
     3. Dig out a hole the size of the seedling container
-    4. Flip the seelding pside down and gently sqweeze the sides of the pot unitl it slides out
+    4. Flip the seelding upside down and gently sqweeze the sides of the pot unitl it slides out
     5 Carefuly place the seeding in it's new pot
     6. Add soil and don't forget to tamp around the plant
 
