--- a/20_veg/20_mid/10_how_to_defoliate/en.yml
+++ b/20_veg/20_mid/10_how_to_defoliate/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: How to defoliate
 tags:
   - sgl
   - vertical
@@ -9,4 +9,7 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    
+    Defoliation is a pruning method which consists in strategically removing leaves to redirect the plant's energy to boost both growth and yield.
+    1. Start from the top; check under big leaves, if it's covering up a future branch/bud site; remove it by pinching the stem with your fingernails.
+    2. Move your way down and keep removing the bigger leaves that cast shadows over interesting growth spots.
+    3. Tangled/overlaping leaves should aslo be removed to help out your plant's succesful development.
