--- a/20_veg/20_mid/20_how_to_prune_side_branches/en.yml
+++ b/20_veg/20_mid/20_how_to_prune_side_branches/en.yml
@@ -1,5 +1,8 @@
 title: How to germinate your seeds
-tags: sgl, vertical, soil
+tags:
+  - sgl
+  - vertical
+  - soil
 reftime: 42
 intro:
   image:
