--- a/30_bloom/30_late/10_when_to_flush/en.yml
+++ b/30_bloom/30_late/10_when_to_flush/en.yml
@@ -9,4 +9,6 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    Flushing: only using pH water for the last 1-2weeks before harvesting to
+    Flushing: only using pH water for the last 1-2weeks before harvesting to improve the quality and smoothness of your cannabis buds.
+    Water as usual just don't add any nutrients :)
+    *note: don't forget to check and adjust your pH*
