--- a/template/en.yml
+++ b/template/en.yml
@@ -83,3 +83,21 @@ triggers:
   - id: HUMIDITY
     metric: HUMI
     value: 60-70
+
+ctas:
+  - title: Wet trim
+    actions:
+      - type: tip
+        params:
+        tip_id: 40_harvest\20_mid\10_how_to_trim
+
+      - type: set_key
+        params:
+          key: trim_type
+          value: wet
+  
+  - title: Experiment observations
+    actions:
+      - type: observation
+        params:
+        experiment_id: curing
