Reftime for each step

--- a/20_veg/20_mid/30_how_to_prune_side_branches/en.yml
+++ b/20_veg/20_mid/30_how_to_prune_side_branches/en.yml
@@ -3,7 +3,7 @@ tags:
   - sgl
   - vertical
   - soil
-reftime: 42
+reftime: 18-21
 intro:
   image:
     url: assets/pic.png
@@ -12,5 +12,5 @@ intro:
     Pruning is any form of removing plant material to have a plant grow a certain way.
     Our goal is to end up with a 'flat' 1 axis plant to make better use of our available space and vertical side lighting configuration.
     1. Check your plants growth by nodes; #1 and #2 are usually quite weak, #3 and #4 are the ones you're interested in.
-    2. Select an axis
+    2. Select the axis showing the bet growth, node thickness
     3. Cut all side branches that are perpendicular to your selected axis.
