--- a/20_veg/30_late/20_when_to_switch_to_bloom/en.yml
+++ b/20_veg/30_late/20_when_to_switch_to_bloom/en.yml
@@ -3,11 +3,11 @@ tags:
   - sgl
   - vertical
   - soil
-reftime: 42
+reftime: 35-42
 intro:
   image:
     url: assets/pic.png
     layout: left
   text: |
-    Once your plant has recovered from topping (1-3 days) it's time to transition from vegetative stage to flowering stage!
+    Once your plant has recovered from topping it's time to transition from vegetative stage to flowering stage!
     Time to produce some nice buds!!
