--- a/30_bloom/30_late/10_when_to_harvest/en.yml
+++ b/30_bloom/30_late/10_when_to_harvest/en.yml
@@ -3,7 +3,7 @@ tags:
   - sgl
   - vertical
   - soil
-reftime: 42
+reftime: 98-105
 intro:
   image:
     url: assets/pic.png
@@ -13,6 +13,7 @@ intro:
     clear and translucent: immature
     cloudy and translucent: energetic high
     cloudy and amber: body high
+    Check on them every couple of days until you find your prefered ratio.
 
 products:
   - name: Jewler's loupe x60
