--- a/10_seedling/20_mid/00_when_to_water_seedling/en.yml
+++ b/10_seedling/20_mid/00_when_to_water_seedling/en.yml
@@ -9,7 +9,8 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    Should I water?
+    It's going to take a few days for the soil to dry, check every 2 days.
+    Should you water?
     1. Sight: look at the soil, does it look dry? yes->step2
     2. Touch: place finger in the soil 1 knuckle deep, is the soil dry? yes->step3
     3. Weight: pick up the pot, does it feel very light? yes-> time to water :)
