--- a/30_bloom/10_early/00_how_to_switch_to_bloom/en.yml
+++ b/30_bloom/10_early/00_how_to_switch_to_bloom/en.yml
@@ -3,11 +3,11 @@ tags:
   - sgl
   - vertical
   - soil
-reftime: 42
+reftime: 35-42
 intro:
   image:
     url: assets/pic.png
     layout: left
   text: |
-    With the press of a button on the SuperGreenLab app the controller switches the vegetative 18/6 light cycle to the flowering 12/12.
+    With the press of a button on the SuperGreenLab app, the controller switches the vegetative 18/6 light cycle to the flowering 12/12.
     Congratulations: Flowering day 0!
