--- a/30_bloom/30_late/20_when_to_flush/en.yml
+++ b/30_bloom/30_late/20_when_to_flush/en.yml
@@ -3,12 +3,13 @@ tags:
   - sgl
   - vertical
   - soil
-reftime: 42
+reftime: 84-91
 intro:
   image:
     url: assets/pic.png
     layout: left
   text: |
     Flushing: only using pH water for the last 1-2weeks before harvesting to improve the quality and smoothness of your cannabis buds.
+    When you see the the trichomes get close to your prefered ratio it's time to flush.
     Water as usual just don't add any nutrients :)
     *note: don't forget to check and adjust your pH*
