--- a/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
@@ -10,7 +10,7 @@ intro:
     layout: left
   text: |
     **Genetics matter**; get your seeds from reputable seedbanks!
-    Pick a strain that **meets your needs**; aroma/flavor, symptom relief, ect.
+    Pick a strain that **meets your needs**; aroma/flavor, symptom relief, etc.
     Here's a list of recommended seedbanks used by SuperGreenLab growers.
 
 sections:
