--- a/20_veg/20_mid/40_how_to_prune_side_branches/en.yml
+++ b/20_veg/20_mid/40_how_to_prune_side_branches/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: How to prune side branches
 tags:
   - sgl
   - vertical
@@ -10,7 +10,7 @@ intro:
     layout: left
   text: |
     Pruning is any form of removing plant material to have a plant grow a certain way.
-    Our goal is to end up with a 'flat' 1 axis plant to make better use of our available space and vertical side lighting configuration.
+    Our goal is to end up with a 'flat' 1 axis plant (like a menorah) to make better use of our available space and vertical side lighting configuration.
     1. Check your plants growth by nodes; #1 and #2 are usually quite weak, #3 and #4 are the ones you're interested in.
-    2. Select the axis showing the bet growth, node thickness
+    2. Select the axis showing the best growth, node thickness
     3. Cut all side branches that are perpendicular to your selected axis.
