--- a/50_curing/30_late/20_how_to_long_term_storage/en.yml
+++ b/50_curing/30_late/20_how_to_long_term_storage/en.yml
@@ -1,4 +1,4 @@
-title: 1 week cure
+title: How to store your buds long term
 tags:
   - sgl
   - vertical
@@ -10,7 +10,8 @@ intro:
     layout: left
   text: |
     If you want to store your bud for longer periods you'll want to reach 55-60% RH - at this point it can be stored for an extended period (3 months or more) without worrying about mold. The product will continue to cure.
-    
+    *note: remember to keep your stored bud jars in dark dry places*
+
 ctas:
   - title: Experiment observations
     actions:
