--- a/20_veg/20_mid/10_when_to_train_your_plant/en.yml
+++ b/20_veg/20_mid/10_when_to_train_your_plant/en.yml
@@ -1,4 +1,4 @@
-title: How to germinate your seeds
+title: When to train your plant
 tags:
   - sgl
   - vertical
@@ -11,4 +11,4 @@ intro:
   text: |
     Increase yield potential by training your plant to best fit it's space and light configuration.
     In tight spaces with vertical lighting it's simple, training starts with a healthy plant having between 3-5 nodes.
-    *important note: only train a healthy plant - training an sick/weak plant may harm the plant*
+    *important note: only train a healthy plant - training a sick/weak plant may harm the plant*
