--- a/20_veg/30_late/10_when_to_top/en.yml
+++ b/20_veg/30_late/10_when_to_top/en.yml
@@ -9,5 +9,5 @@ intro:
     url: assets/pic.png
     layout: left
   text: |
-    Topping is a pruning method which consists in cutting the main stem to multiply the number of main colos and boost the side branches.
+    Topping is a pruning method which consists in cutting the main stem to multiply the number of main colas and boost the side branches.
     When the plant reaches 60%-75% max height it's time to top :)
