added images to 10_seedling stage

--- a/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
+++ b/10_seedling/10_early/10_how_to_choose_your_seed/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 0
 intro:
   image:
-    url: assets/seeds.png
+    url: assets/how_to_choose_seed.png
     layout: left
   text: |
     **Genetics matter**; get your seeds from reputable seedbanks!
