context fix line 30

--- a/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
+++ b/10_seedling/10_early/30_how_to_sow_your_seed/en.yml
@@ -27,6 +27,7 @@ products:
         image: assets/clay_balls.png
         url: https://www.amazon.de/dp/B07KK9ZPRZ
   - name: Small pot
+    urls:
       - zone: EU
         image: assets/small_pot.png
         url: https://www.amazon.de/dp/B07KK9ZPRZ
