added image to 20_veg

--- a/20_veg/10_early/10_how_to_transplant_your_seedling/en.yml
+++ b/20_veg/10_early/10_how_to_transplant_your_seedling/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 7-10
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_translplant_seedling.png
     layout: left
   text: |
     1. Put a layer of clay balls at the bottom of the fabric pot
