--- a/20_veg/20_mid/20_how_to_low_stress_training_LST/en.yml
+++ b/20_veg/20_mid/20_how_to_low_stress_training_LST/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 15-18
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_low_stress_training_LST.png
     layout: left
   text: |
     Low Stress Training are methods that as the name imply don't cause much stress.
