--- a/20_veg/20_mid/30_how_to_defoliate/en.yml
+++ b/20_veg/20_mid/30_how_to_defoliate/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 18-21
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_defoliate.png
     layout: left
   text: |
     Defoliation is a pruning method which consists in strategically removing leaves to redirect the plant's energy to boost both growth and yield.
