--- a/20_veg/20_mid/40_how_to_prune_side_branches/en.yml
+++ b/20_veg/20_mid/40_how_to_prune_side_branches/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 18-21
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_prune_side_branches.png
     layout: left
   text: |
     Pruning is any form of removing plant material to have a plant grow a certain way.
