--- a/20_veg/30_late/30_when_to_switch_to_bloom/en.yml
+++ b/20_veg/30_late/30_when_to_switch_to_bloom/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 35-42
 intro:
   image:
-    url: assets/pic.png
+    url: assets/when_to_switch_to_bloom.png
     layout: left
   text: |
     Once your plant has recovered from topping it's time to transition from vegetative stage to flowering stage!
