30_bloom + 40_harvest pictures added

--- a/30_bloom/10_early/10_how_to_switch_to_bloom/en.yml
+++ b/30_bloom/10_early/10_how_to_switch_to_bloom/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 35-42
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_switch_to_bloom.png
     layout: left
   text: |
     With the press of a button on the SuperGreenLab app, the controller switches the vegetative 18/6 light cycle to the flowering 12/12.
