--- a/30_bloom/10_early/20_how_to_prepare_bloom_nutrients/en.yml
+++ b/30_bloom/10_early/20_how_to_prepare_bloom_nutrients/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 35-42
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_prepare_bloom_nutrients.png
     layout: left
   text: |
     Plants'nutrient needs change when going into flowering.
