--- a/30_bloom/30_late/10_when_to_harvest/en.yml
+++ b/30_bloom/30_late/10_when_to_harvest/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 98-105
 intro:
   image:
-    url: assets/pic.png
+    url: assets/when_to_harvest.png
     layout: left
   text: |
     Trichomes are the best indicator for cannabis maturity, use them as your guide to harvest:
