--- a/40_harvest/10_early/10_when_to_trim/en.yml
+++ b/40_harvest/10_early/10_when_to_trim/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 98-105
 intro:
   image:
-    url: assets/pic.png
+    url: assets/when_to_trim.png
     layout: left
   text: |
     Trim before drying (wet trim) if you have high humidity (RH>50%)to allow better airflow around your buds and prevent moisutre build up (mold).
