--- a/40_harvest/20_mid/20_how_to_dry/en.yml
+++ b/40_harvest/20_mid/20_how_to_dry/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 105-112
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_dry.png
     layout: left
   text: |
     You want your buds to dry slowly enough to avoid "hay smell" while avoiding moisture build-up to prevent molding.
