--- a/40_harvest/30_late/10_how_to_dry_trim/en.yml
+++ b/40_harvest/30_late/10_how_to_dry_trim/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 112-119
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_dry_trim.png
     layout: left
   text: |
     Now that your harvest has dried it's time to trim!
