50_curing added pictures

--- a/50_curing/10_early/10_why_cure/en.yml
+++ b/50_curing/10_early/10_why_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 112-119
 intro:
   image:
-    url: assets/pic.png
+    url: assets/why_cure.png
     layout: left
   text: |
     Curing is what makes the difference between 'weed' and award-winning cannabis; it is the ultimate delayed gratification challenge.
