--- a/50_curing/10_early/20_how_to_cure/en.yml
+++ b/50_curing/10_early/20_how_to_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 112-119
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_cure.png
     layout: left
   text: |
     Curing is all about controlling the humidity of the environment.
