--- a/50_curing/10_early/30_what_to_look_for_when_curing/en.yml
+++ b/50_curing/10_early/30_what_to_look_for_when_curing/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 112-119
 intro:
   image:
-    url: assets/pic.png
+    url: assets/what_to_look_for_when_curing.png
     layout: left
   text: |
     Before opening the jar shake it, buds should move independently, if the buds stick together they're still wet and need more drying.
