--- a/50_curing/20_mid/20_3_week_cure/en.yml
+++ b/50_curing/20_mid/20_3_week_cure/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 133-140
 intro:
   image:
-    url: assets/pic.png
+    url: assets/3_week_cure.png
     layout: left
   text: |
     Time to sample your harvest after 3 weeks of curing :)
