--- a/50_curing/30_late/20_how_to_long_term_storage/en.yml
+++ b/50_curing/30_late/20_how_to_long_term_storage/en.yml
@@ -6,7 +6,7 @@ tags:
 reftime: 147
 intro:
   image:
-    url: assets/pic.png
+    url: assets/how_to_long_term_storage.png
     layout: left
   text: |
     If you want to store your bud for longer periods you'll want to reach 55-60% RH - at this point it can be stored for an extended period (3 months or more) without worrying about mold. The product will continue to cure.
